<resources>
    <string name="app_name">TestBricks</string>
    <string name="row">Row</string>
    <string name="column">Column</string>
    <string name="bricks_one">One</string>
    <string name="bricks_two">Two</string>
    <string name="bricks_three">Three</string>
    <string name="btn_check">Check</string>
    <string name="btn_set_voids">Set voids</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="number_format_exception">Вы заполнили не все поля.\nВведите их и попробуйте еще раз.</string>
    <string name="exception">Произошла ошибка.\nПопробуйте ввести данные еще раз.</string>
    <string name="enter_row_column">Введите нужное количество рядков и столбцов</string>
    <string name="enter_bricks">Введите нужное количество кирпичей</string>
    <string name="check_or_set_voids">Можно проверить без задиния пустот, или задать определеные пустоты</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="row_and_column_enter">Enter rows * columns</string>
</resources>
